--- a/apps/api/src/main/resources/application.yml
+++ b/apps/api/src/main/resources/application.yml
@@ -4,6 +4,26 @@ server:
 spring:
   application:
     name: minichat-api
+  datasource:
+    url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/minichat}
+    username: ${POSTGRES_USER:minichat}
+    password: ${POSTGRES_PASSWORD:minichat}
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    open-in-view: false
+    hibernate:
+      ddl-auto: validate
+    properties:
+      hibernate:
+        format_sql: false
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+
+security:
+  jwt:
+    secret: ${JWT_SECRET:change_me_in_prod_change_me_in_prod_change_me}
+    expires-seconds: ${JWT_EXPIRES_SECONDS:3600}
 
 management:
   endpoints:
