feat: add generation flow with limits and event publishing

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,12 @@ DATABASE_URL=jdbc:postgresql://localhost:5432/minichat
 REDIS_URL=redis://localhost:6379
 RABBITMQ_URL=amqp://guest:guest@localhost:5672/
 INFERENCE_BASE_URL=http://localhost:8000
+INFERENCE_CONNECT_TIMEOUT_MS=5000
+INFERENCE_READ_TIMEOUT_MS=600000
+GEN_QPS_LIMIT=2
+GEN_INFLIGHT_TTL_SECONDS=1800
+GEN_DEFAULT_TEMPERATURE=0.7
+GEN_DEFAULT_MAX_TOKENS=512
 
 # Inference (FastAPI)
 INFERENCE_PORT=8000
