--- a/apps/api/src/main/resources/application.yml
+++ b/apps/api/src/main/resources/application.yml
@@ -19,11 +19,29 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration
+  rabbitmq:
+    addresses: ${RABBITMQ_URL:amqp://guest:guest@localhost:5672/}
+  data:
+    redis:
+      url: ${REDIS_URL:redis://localhost:6379}
 
 security:
   jwt:
     secret: ${JWT_SECRET:change_me_in_prod_change_me_in_prod_change_me}
     expires-seconds: ${JWT_EXPIRES_SECONDS:3600}
+
+app:
+  inference:
+    base-url: ${INFERENCE_BASE_URL:http://localhost:8000}
+    connect-timeout-ms: ${INFERENCE_CONNECT_TIMEOUT_MS:5000}
+    read-timeout-ms: ${INFERENCE_READ_TIMEOUT_MS:600000}
+  generation:
+    default-model: ${DEFAULT_MODEL:gpt-4o-mini}
+    default-temperature: ${GEN_DEFAULT_TEMPERATURE:0.7}
+    default-max-tokens: ${GEN_DEFAULT_MAX_TOKENS:512}
+  limits:
+    qps: ${GEN_QPS_LIMIT:2}
+    inflight-ttl-seconds: ${GEN_INFLIGHT_TTL_SECONDS:1800}
 
 management:
   endpoints:
