feat: wire api inference web and worker integration

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ RABBITMQ_PASSWORD=guest
 
 # API (Spring Boot)
 API_PORT=8080
+WEB_ORIGIN=http://localhost:3000
 JWT_SECRET=change_me_in_prod_change_me_in_prod_change_me
 JWT_EXPIRES_SECONDS=3600
 DATABASE_URL=jdbc:postgresql://localhost:5432/minichat
@@ -38,6 +39,11 @@ DEFAULT_MODEL=gpt-4o-mini
 
 # Worker (Go)
 WORKER_LOG_LEVEL=info
+WORKER_USAGE_QUEUE=usage_event
+WORKER_AUDIT_QUEUE=audit_event
+WORKER_PREFETCH=20
+WORKER_RETRY_SECONDS=5
+WORKER_HANDLE_TIMEOUT_SECONDS=10
 
 # Web (Next.js)
 WEB_PORT=3000
