--- a/apps/api/src/main/resources/application.yml
+++ b/apps/api/src/main/resources/application.yml
@@ -31,6 +31,7 @@ security:
     expires-seconds: ${JWT_EXPIRES_SECONDS:3600}
 
 app:
+  web-origin: ${WEB_ORIGIN:http://localhost:3000}
   inference:
     base-url: ${INFERENCE_BASE_URL:http://localhost:8000}
     connect-timeout-ms: ${INFERENCE_CONNECT_TIMEOUT_MS:5000}
