--- a/apps/worker/Dockerfile
+++ b/apps/worker/Dockerfile
@@ -1,5 +1,7 @@
 FROM golang:1.22-alpine AS build
 WORKDIR /src
+COPY go.mod go.sum ./
+RUN go mod download
 COPY . .
 RUN go build -o /out/worker ./cmd/worker
 
